<resources>
    <string name="app_name">Stock Lightweight</string>

    <string name="txt_loading">Loading...</string>
    <string name="txt_stock_quotes">Stock quotes</string>
    <string name="txt_optional_quotation">Optional quotation</string>
    <string name="txt_setting">Setting</string>
    <string name="text_search_hint">Please input stock code or Company name</string>
    <string name="text_final_price">Final Price</string>
    <string name="text_gap">Gap</string>
    <string name="text_percentage">Percentage</string>
    <string name="text_volume">Volume</string>
    <string name="text_accumulation">Accumulation</string>
    <string name="text_close_yesterday">Closed yesterday</string>
    <string name="text_opening">Opening</string>
    <string name="text_highest">Highest</string>
    <string name="text_lowest">Lowest</string>
    <string name="text_add_new_data">add new one</string>
    <string name="text_delete_all">Delete All</string>
    <string name="text_delete_dialog_title">Delete All?</string>
    <string name="text_delete_dialog_yes">Yes</string>
    <string name="text_delete_dialog_no">No</string>
    <string name="text_delete_dialog_title_one">Delete This?</string>
    <string name="text_delete_one">Delete</string>
    <string name="text_demo">This is demo version</string>
</resources>
